@@ -1,3 +1,13 @@
+2009-07-08  Ramon Novoa  <rnovoa@artica.es>
+
+	* include/functions_fsgraph.php: Use the user defined date format in
+	  module and combined charts.
+
+	* operation/agentes/estado_ultimopaquete.php: Fixed the chart URL.
+
+	* operation/agentes/stat_win.php: Show the agent name in the window
+	  title.
+
 2009-07-06  Jorge Gonzalez  <jorgegonz@artica.es>
 
 	* include/languages/es.po, include/languages/es.mo: Updated Spanish
